Video images follow displayOrder; Show images at given frame rate